Fix url div overflow

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ blockquote {
   font-size: 1.5rem;
 }
 
+#url {
+  max-width: 75%;
+}
+
 figure {
   padding: 1.5%;
   background-color: #0d151e;
@@ -34,7 +38,6 @@ figure {
   border: 0.5px solid #2d4557;
   animation: 21s infinite fadeIn;
   max-width: 75%;
-  overflow: auto;
 }
 
 html {
@@ -124,5 +127,9 @@ span a {
 @media only screen and (max-width: 770px) {
   figure {
     max-width: 90%;
+  }
+
+  #url {
+    max-width: 90%; 
   }
 }
